[package]
name = "rust_kernel"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_kernel"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
lto = true
codegen-units = 1
opt-level = "s"

[dependencies]
buddy_allocator = { git = "https://github.com/project-eonix/buddy-allocator.git", version = "0.1.0" }
slab_allocator = { git = "https://github.com/project-eonix/slab-allocator.git", version = "0.1.0" }
eonix_spin = { git = "https://github.com/project-eonix/eonix-sync.git",
        version = "0.2.0", features = [ "raw-ops" ] }
eonix_sync_base = { git = "https://github.com/project-eonix/eonix-sync.git", version = "0.1.0" }
eonix_mm = { git = "https://github.com/project-eonix/eonix-mm.git", version = "0.1.0" }
intrusive-collections = { version = "0.9.7", default-features = false, features = [ "nightly" ] }
bitflags = "2.11.0"

[features]
default = []
debug = [ "debug_irq", "debug_timer", "debug_scheduler", "debug_proc" ]
debug_irq = []
debug_timer = []
debug_scheduler = []
debug_proc = []
